--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,9 @@ set -g base-index 1
 set -g renumber-windows on
 set -s escape-time 0
 
+# Enable mouse mode for nice selection, scroll, resizing
+set -g mouse on
+
 # Enable vi keys.
 setw -g mode-keys vi
 
