--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,8 +16,8 @@ setw -g window-style fg=colour240
 setw -g window-active-style fg=white
 
 # Change split keys
-bind-key \ split-window -h
-bind-key - split-window -v
+bind-key '\' split-window -h
+bind-key '-' split-window -v
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
